--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="vi己紹介</title>
     <link rel="sewport" content="width=device-width, initial-scale=1.0">
-    <title>自tylesheet" href="style.css">
+    <title>t自ylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
 
     </section>
 
-    <footer>   <p>&copy; 2024 本多優斗</p>
+      <p>&copy; 2024 本多優斗</p>
      
     </footer>
 </body>
